feat!: new gateway management (#238)
