# libs/manager-kontrol-api/api/golang/types/types.gen.go
@@ -8,6 +8,8 @@ import (
 	v1beta1 "istio.io/client-go/pkg/apis/security/v1beta1"
 	appsv1 "k8s.io/api/apps/v1"
 	corev1 "k8s.io/api/core/v1"
+	net "k8s.io/api/networking/v1"
+	gateway "sigs.k8s.io/gateway-api/apis/v1"
 )
 
 // Defines values for ResponseType.
@@ -23,7 +25,9 @@ type ClusterResources struct {
 	Deployments           *[]appsv1.Deployment           `json:"deployments,omitempty"`
 	DestinationRules      *[]v1alpha3.DestinationRule    `json:"destination_rules,omitempty"`
 	EnvoyFilters          *[]v1alpha3.EnvoyFilter        `json:"envoy_filters,omitempty"`
-	Gateway               *v1alpha3.Gateway              `json:"gateway,omitempty"`
+	Gateways              *[]gateway.Gateway             `json:"gateways,omitempty"`
+	HttpRoutes            *[]gateway.HTTPRoute           `json:"http_routes,omitempty"`
+	Ingresses             *[]net.Ingress                 `json:"ingresses,omitempty"`
 	Services              *[]corev1.Service              `json:"services,omitempty"`
 	VirtualServices       *[]v1alpha3.VirtualService     `json:"virtual_services,omitempty"`
 }
